add ui logic for hold button

--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
      </div>
      <div class="col-md-6">
        <h2>Score</h2>
-       <h4>Player 1 Round Score: <span id="player1round"></span></h4>
-       <h4>Player 1 Total Score: <span id="player1total"></span></h4>
-       <h4>Player 2 Round Score: <span id="player2round"></span></h4>
-       <h4>Player 2 Total Score: <span id="player2total"></span></h4>
+       <h4>Player 1 Score: <span id="player1round"></span></h4>
+       <h4>Player 2 Score: <span id="player2round"></span></h4>
       </div>
    </div>
   </body>
